Layout für Smartphone angepasst, Formfehler behoben, Fehlermeldungen detaillierter anzeigen hinzugefügt

--- a/winexhibition-questionnaire/WineExhibitionQuestionnaire/Resources/LocRes.en.resx
+++ b/winexhibition-questionnaire/WineExhibitionQuestionnaire/Resources/LocRes.en.resx
@@ -145,7 +145,7 @@
     <value>Your Data</value>
   </data>
   <data name="Index_Submit" xml:space="preserve">
-    <value>Submit order</value>
+    <value>Submit expression of interest</value>
   </data>
   <data name="LastName" xml:space="preserve">
     <value>Last Name</value>
