--- a/winexhibition-questionnaire/WineExhibitionQuestionnaire/Resources/LocRes.resx
+++ b/winexhibition-questionnaire/WineExhibitionQuestionnaire/Resources/LocRes.resx
@@ -145,7 +145,7 @@
     <value>Ihre Daten</value>
   </data>
   <data name="Index_Submit" xml:space="preserve">
-    <value>Bestellung abschicken</value>
+    <value>Interessensbekundung abschicken</value>
   </data>
   <data name="LastName" xml:space="preserve">
     <value>Nachname</value>
