--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values/strings.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="code_label"><u>Trophy-Code:</u></string>
     <string name="navigation_drawer_open"><u>Open Drawer</u></string>
     <string name="navigation_drawer_close"><u>Close Drawer</u></string>
+    <string name="navigation_drawer_item">%1$s (%2$d)</string>
+    ? (?)
 </resources>
