--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values/strings.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="navigation_drawer_open"><u>Open Drawer</u></string>
     <string name="navigation_drawer_close"><u>Close Drawer</u></string>
     <string name="navigation_drawer_item">%1$s (%2$d)</string>
-    ? (?)
+    <string name="bottomtext_winelist">Displaying %1$d of %2$d results.</string>
 </resources>
