--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values/strings.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values/strings.xml
@@ -1,12 +1,22 @@
 <resources>
     <string name="app_name">WineSearchApp</string>
-    <string name="login_button">Einloggen</string>
-    <string name="search_button">Suchen</string>
-    <string name="reset_button">Filter zurücksetzen</string>
+    <string name="login_button">Login</string>
+    <string name="search_button">Search</string>
+    <string name="reset_button">Reset filters</string>
     <string name="code_label"><u>Trophy-Code:</u></string>
+    <string name="placeholder_search"><u>Wine Name</u></string>
     <string name="navigation_drawer_open"><u>Open Drawer</u></string>
     <string name="navigation_drawer_close"><u>Close Drawer</u></string>
     <string name="navigation_drawer_item">%1$s (%2$d)</string>
-    <string name="bottomtext_winelist">Zeige %1$d von %2$d Ergebnissen</string>
-    <string name="placeholder_search">Weinname</string>
+
+    <string name="winelist_bottomText">Displaying %1$d of %2$d Results</string>
+    <string name="winelist_producer">Producer: %1$s</string>
+    <string name="winelist_origin">Origin: %1$s</string>
+    <string name="winelist_varietal">Varietal(s): %1$s</string>
+    <string name="winelist_award">Award: %1$s</string>
+
+    <string name="yes">True</string>
+    <string name="no">False</string>
+
+    <string name="language">en</string>
 </resources>
