Neue Activity für Einstellungen hinzugefügt; Toolbar Funktionalität für Platzierung oben / unten durch Einstellungen ergänzt

--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values-de/strings.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values-de/strings.xml
@@ -20,4 +20,8 @@
     <string name="no">Nein</string>
 
     <string name="language">de</string>
+
+    <string name="settings_darkmode">Dunkelmodus aktiviert:</string>
+    <string name="settings_toolbar">Werkzeugleiste unten:</string>
+    <string name="settings_medal">Medaille Vorschau:</string>
 </resources>
