--- a/winexhibition-questionnaire/WineExhibitionQuestionnaire/Resources/LocRes.en.resx
+++ b/winexhibition-questionnaire/WineExhibitionQuestionnaire/Resources/LocRes.en.resx
@@ -231,4 +231,7 @@
   <data name="Index_Attention" xml:space="preserve">
     <value>ATTENTION: This is only an indication of interest, you do not assume any contractual relationship with us.&lt;br/&gt;If you are interested in taking part, we will send you the contracts for the WEINmesse 2022 as soon as possible.</value>
   </data>
+  <data name="Error_Size" xml:space="preserve">
+    <value>The required minimum size is 4 m²</value>
+  </data>
 </root>
