--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values/strings.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values/strings.xml
@@ -24,4 +24,13 @@
     <string name="settings_darkmode">Darkmode enabled:</string>
     <string name="settings_toolbar">Toolbar at bottom:</string>
     <string name="settings_medal">Preview medal:</string>
+
+    <string name="descriptionHeader">Description</string>
+    <string name="producerHeader">Producer</string>
+    <string name="wineRegionHeader">Wine Region</string>
+    <string name="grapeInformationHeader">Grape Information</string>
+    <string name="availabilityHeader">Availability</string>
+
+    <string name="loremipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. <br/> <br/>
+        Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. </string>
 </resources>
