--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values-de/strings.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values-de/strings.xml
@@ -9,6 +9,8 @@
     <string name="navigation_drawer_close"><u>Close Drawer</u></string>
     <string name="navigation_drawer_item">%1$s (%2$d)</string>
 
+    <string name="internet_error">Ein Problem bei der Verbindung zum Server ist aufgetreten</string>
+
     <string name="winelist_bottomText">Zeige %1$d von %2$d Ergebnissen</string>
     <string name="winelist_producer">Produzent: %1$s</string>
     <string name="winelist_origin">Ursprung: %1$s</string>
