--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values/strings.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="navigation_drawer_close"><u>Close Drawer</u></string>
     <string name="navigation_drawer_item">%1$s (%2$d)</string>
 
+    <string name="internet_error">There were problems connecting to the server</string>
+
     <string name="winelist_bottomText">Displaying %1$d of %2$d Results</string>
     <string name="winelist_producer">Producer: %1$s</string>
     <string name="winelist_origin">Origin: %1$s</string>
