WineSearchApp_Extern: Icon für Produzentenlink für Erkennlichkeit hinzugefügt; ProducerActivity an Toolbar unten angepasst; FacetQueryGroups angepasst sodass nur noch prämierte Weine als Liste geliefert werden; Anzahl an gewonnenen Medaillen wird jetzt ebenfalls in ProducerActivity aufgelistet

--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values-de/strings.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values-de/strings.xml
@@ -21,6 +21,10 @@
     <string name="yes">Ja</string>
     <string name="no">Nein</string>
 
+    <string name="grand_gold">Großes Gold:</string>
+    <string name="gold">Gold:</string>
+    <string name="silver">Silber:</string>
+
     <string name="language">de</string>
 
     <string name="settings_darkmode">Dunkelmodus aktiviert:</string>
